Ingresss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - host: app.example.com   #if traffic goes to this name then routed to 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: clip-v5
            port: 
              number: 80
      - pathType: Prefix
        path: /v4
        backend:
          service:
            name: clip-v4
            port: 
              number: 80
      - pathType: Exact
        path: /v5
        backend:
          service:
            name: clip-v5
            port: 
              number: 80
  - host: app4.example.com   #if traffic goes to this name then routed to 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clip-v4
            port: 
              number: 80
